--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/main.js",
-    "dev": "nodemon main.ts",
+    "dev": "nodemon main.ts -e ts,pug",
     "build": "npx tsc"
   },
   "keywords": [],
@@ -22,6 +22,7 @@
     "@types/express": "^4.17.21",
     "@types/node": "^22.0.0",
     "nodemon": "^3.1.4",
+    "reload": "^3.2.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.16.2",
     "typescript": "^5.5.4"
