--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/main.js",
-    "dev": "nodemon main.ts -e ts,pug",
+    "tailwind": "npx tailwindcss -i ./assets/main.css -o ./dist/styles.css --watch",
+    "dev": "concurrently \"npm run tailwind\" \"nodemon main.ts -e ts,pug\"",
     "build": "npx tsc"
   },
   "keywords": [],
@@ -21,8 +22,12 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.0.0",
+    "autoprefixer": "^10.4.19",
+    "concurrently": "^8.2.2",
     "nodemon": "^3.1.4",
-    "reload": "^3.2.1",
+    "postcss": "^8.4.40",
+    "reload": "^3.2.0",
+    "tailwindcss": "^3.4.7",
     "ts-node": "^10.9.2",
     "tsx": "^4.16.2",
     "typescript": "^5.5.4"
